--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </nav>
   <div id="side-nav">
     <a href="#" class="close-btn" onClick="closeSideMenu()">&#9776;</a>
-    <a href="C:\Users\50487\Desktop\Misael MsWhatsApp\404.html">Download</a>
-    <a href="C:\Users\50487\Desktop\Misael MsWhatsApp\changelog.html">changelog</a>
+    <a href="">Download</a>
+    <a href="">changelog</a>
     <a href="#">About me</a>
   </div>
 </div>
