--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
      <a href="#" class="open-btn" onClick='openSideMenu()'>&#9776;</a>
   </div>
   <nav id="nav-menu">
-    <a href="C:\Users\50487\Desktop\Misael MsWhatsApp\404.html">Download</a>
-    <a href="C:\Users\50487\Desktop\Misael MsWhatsApp\changelog.html">changelog</a>
+    <a href="">idk</a>
+    <a href="">idk</a>
     <a href="#">About me</a>
   </nav>
   <div id="side-nav">
