--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
      <a href="#" class="open-btn" onClick='openSideMenu()'>&#9776;</a>
   </div>
   <nav id="nav-menu">
-    <a href="">idk</a>
-    <a href="">idk</a>
+    <a href="">.idk.</a>
+    <a href="">.idk.</a>
     <a href="#">About me</a>
   </nav>
   <div id="side-nav">
