--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   </nav>
   <div id="side-nav">
     <a href="#" class="close-btn" onClick="closeSideMenu()">&#9776;</a>
-    <a href="">Download</a>
-    <a href="">changelog</a>
+    <a href="">.idk.</a>
+    <a href="">.idk.</a>
     <a href="#">About me</a>
   </div>
 </div>
