--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <span class="logo-parts">P</span>
       <span class="logo-parts">O</span>
       <span class="logo-parts">O</span>
-      <span class="logo-parts">k</span>
+      <span class="logo-parts">K</span>
   </h1>
   <p>portfoliospok</p>
 </div> 
