--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <nav id="nav-menu">
     <a href="">.idk.</a>
     <a href="">.idk.</a>
-    <a href="./about">About me</a>
+    <a href="https://spookesites.github.io/portfoliospok/about">About me</a>
   </nav>
   <div id="side-nav">
     <a href="#" class="close-btn" onClick="closeSideMenu()">&#9776;</a>
     <a href="">.idk.</a>
     <a href="">.idk.</a>
-    <a href="/.about">About me</a>
+    <a href="https://spookesites.github.io/portfoliospok/about">About me</a>
   </div>
 </div>
 
