--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link Rel=StyleSheet Href="style.css" type="text/css" Media="screen">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    </head>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="cursorscript.js"></script>
+  </head>
 
 <!--Todos los scripts de uso-->
 <script>
@@ -22,7 +25,11 @@
   }
 </script>
 
+
+
 <!--Introduccion Slash Screen-->
+<div id="cursor"></div>
+
 <div class="intro">
   <img src="https://scontent.ftji1-1.fna.fbcdn.net/v/t1.18169-9/18485505_1875912692697599_6479027776638166854_n.png?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=XcK-ABwkHlQAX9D69LO&_nc_ht=scontent.ftji1-1.fna&oh=00_AfBTwB4jsXvTCD-YlEW03A20k3zEmJoL1Dn7yDuEv-kVjw&oe=641DC2C4" alt="J.R.C">
   <h1 class="logo">
